# SorourEndProjekt

./: .gitignore  data.ipynb  features_test.csv  main.py  neuejupyter.ipynb  pyproject.toml  testsorour.ipynb  testsorour2.ipynb  zwei.ipynb
