[project]
name = "gamedesigndev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.4",
    "beautifulsoup4>=4.13.3",
    "dask>=2025.2.0",
    "fairlearn>=0.12.0",
    "feature-engine>=1.8.3",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.0",
    "missingno>=0.5.2",
    "nltk>=3.9.1",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.0.0",
    "pyarrow>=19.0.0",
    "pyjanitor>=0.30.0",
    "pyspark>=3.5.4",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "selenium>=4.28.1",
    "sqlalchemy>=2.0.38",
    "statsmodels>=0.14.4",
    "streamlit>=1.42.1",
    "tpot>=0.12.2",
    "transformers>=4.49.0",
    "xgboost>=2.1.4",
]
